fix for overflowing intro text on small mobile devices

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -301,9 +301,9 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 700;
-    line-height: 50px;
+    line-height: 45px;
     text-align: right;
 }
 
